<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
    <menu>
        <group android:checkableBehavior="none">
            <item android:title="@string/sort_by">
                <menu>
                    <item android:title="@string/high_priority"
                    android:id="@+id/menu_high_priority" />
                    <item android:title="@string/low_priority"
                    android:id="@+id/menu_low_priority"/>
                </menu>
            </item>
        </group>
    </menu>
    </item>

    <item android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
</menu>